--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -2,7 +2,7 @@
  <head>
   <title>Aveva Bocad model</title>
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"> </script>
+  <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
     <a-scene embedded arjs>
