--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -1,15 +1,16 @@
 <html>
  <head>
   <title>Aveva Bocad model</title>
-  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
+<!-- First, include whichever version of A-Frame you like. -->
+<script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
+<!-- Next, include three.ar.js; add the speech recognition polyfill if you want. -->
+<script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
+<!-- Last, include aframe-ar. -->
+<script src="https://rawgit.com/chenzlabs/aframe-ar/master/dist/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
-    <a-scene embedded arjs>
-  	<a-marker preset="hiro">
-            <a-box position='0 0.5 0' material='color: black;'></a-box>
-  	</a-marker>
-  	<a-entity camera></a-entity>
-    </a-scene>
+<a-scene ar>
+  <a-sphere radius="0.01" position="0 0.005 -0.5"></a-sphere>
+<a-scene> 
  </body>
 </html>
