--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -1,16 +1,15 @@
 <html>
  <head>
   <title>Aveva Bocad model</title>
-<!-- First, include whichever version of A-Frame you like. -->
-<script src="https://rawgit.com/aframevr/aframe/master/dist/aframe-master.min.js"></script>
-<!-- Next, include three.ar.js; add the speech recognition polyfill if you want. -->
-<script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
-<!-- Last, include aframe-ar. -->
-<script src="https://rawgit.com/chenzlabs/aframe-ar/master/dist/aframe-ar.js"></script>
+    <script src="https://rawgit.com/google-ar/three.ar.js/master/dist/three.ar.js"></script>
+    <script src="build.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
-<a-scene ar>
-  <a-sphere radius="0.01" position="0 0.005 -0.5"></a-sphere>
-<a-scene> 
+    <a-scene ar>
+      <a-box scale="0.25 0.25 0.25" position="-0.25 0.125 -0.75" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
+      <a-sphere scale="0.25 0.25 0.25" position="0 0.3125 -1.25" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-cylinder scale="0.25 0.25 0.25" position="0.25 0.1875 -0.75" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+      <a-plane scale="0.25 0.25 0.25" position="0 0 -1" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
+    </a-scene>
  </body>
 </html>
