--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -5,7 +5,7 @@
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
-	<a-scene embedded arjs='sourceType: camera;'>
+	<a-scene>
 		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
