--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -6,7 +6,7 @@
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
 	<a-scene embedded arjs="source: webcam;">
-		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+		<a-gltf-model src="url(model3.gltf)" position="-15 0 10" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="model3.gltf"></a-gltf-model>
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
  </body>
