--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -5,9 +5,18 @@
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
-	<a-scene embedded arjs="source: webcam;">
-		<a-gltf-model src="url(model3.gltf)" position="-15 0 10" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="model3.gltf"></a-gltf-model>
-		<a-marker-camera preset='hiro'></a-marker-camera>
-	</a-scene>
+<a-scene  embedded artoolkit='sourceType: webcam; ' antialias="true" outline>
+  <a-assets>
+    <a-asset-item id="mymodel" src="model3.gltf"></a-asset-item>
+  </a-assets>
+  <a-marker  preset="hiro">
+    <a-entity scale="0.001 0.001 0.001">
+      <a-entity mmd='outline: true' afterglow:2.0;>
+        <a-entity scale="0.03 0.03 0.03" gltf-model="#mymodel"></a-entity>
+      </a-entity>
+    </a-entity>
+  </a-marker>
+  <a-entity camera></a-entity>
+
  </body>
 </html>
