--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -10,11 +10,9 @@
     <a-asset-item id="mymodel" src="model1.gltf"></a-asset-item>
   </a-assets>
   <a-marker  preset="hiro">
-    <a-entity position="-2 0 0" scale="0.001 0.001 0.001" rotation="-90 0 0">
-      <a-entity mmd='outline: true' afterglow:2.0;>
+      <a-entity>
         <a-entity position="-2 0 0" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="#mymodel"></a-entity>
       </a-entity>
-    </a-entity>
   </a-marker>
   <a-entity camera></a-entity>
 
