--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -7,7 +7,7 @@
  <body style=’margin : 0px; overflow: hidden;’>
 <a-scene  embedded artoolkit='sourceType: webcam; ' antialias="true" outline>
   <a-assets>
-    <a-asset-item id="mymodel" src="model3.gltf"></a-asset-item>
+    <a-asset-item id="mymodel" src="model_ar1.gltf"></a-asset-item>
   </a-assets>
   <a-marker  preset="hiro">
       <a-entity>
