--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -11,7 +11,7 @@
   </a-assets>
   <a-marker  preset="hiro">
       <a-entity>
-        <a-entity gltf-model="#mymodel"></a-entity>
+        <a-entity scale="0.001 0.001 0.001" gltf-model="#mymodel"></a-entity>
       </a-entity>
   </a-marker>
   <a-entity camera></a-entity>
