--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -9,10 +9,12 @@
   <a-assets>
     <a-asset-item id="mymodel" src="model_ar1.gltf"></a-asset-item>
   </a-assets>
-  <a-marker  preset="ajrs">
-      <a-entity scale="0.1 0.1 0.1">
+  <a-marker preset="ajrs">
+     <a-entity scale="0.1 0.1 0.1">
+      <a-entity>
         <a-entity position="-12.5 0 0" scale="0.01 0.01 0.01" rotation="-90 0 0" gltf-model="#mymodel"></a-entity>
      </a-entity>
+    </a-entity>
  </a-marker>
   <a-entity camera></a-entity>
 
