--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -7,19 +7,17 @@
  <body style=’margin : 0px; overflow: hidden;’>
 <a-scene  embedded artoolkit='sourceType: webcam; ' antialias="true" outline>
   <a-assets>
-    <img id="ground" src="ground.jpg">
-  </a-assets>
-  <a-assets>
     <a-asset-item id="mymodel" src="model_ar1.gltf"></a-asset-item>
-  </a-assets>
+    <a-asset-item img id="ground" src="ground.jpg"></a-asset-item>
+ </a-assets>
   <a-marker preset="kanji">
      <a-entity>
       <a-entity scale="0.1 0.1 0.1">
         <a-entity position="-12.5 -1 0" scale="0.01 0.01 0.01" rotation="-90 0 0" gltf-model="#mymodel"></a-entity>
+        <a-plane src="#ground" height="200" width="200" rotation="-90 0 0"></a-plane>
      </a-entity>
     </a-entity>
  </a-marker>
-  <a-plane src="#ground" height="200" width="200" rotation="-90 0 0"></a-plane>
   <a-entity camera></a-entity>
 
  </body>
