--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -12,7 +12,7 @@
  </a-assets>
   <a-marker preset="kanji">
      <a-entity>
-      <a-entity scale="0.03 0.03 0.03">
+      <a-entity position="-5 -1 0" scale="0.02 0.02 0.02">
         <a-entity position="-12.5 -1 0" scale="0.01 0.01 0.01" rotation="-90 0 0" gltf-model="#mymodel"></a-entity>
         <a-plane src="#ground" height="20000" width="20000" rotation="-90 0 0"></a-plane>
      </a-entity>
