--- a/Bocad_AR.html
+++ b/Bocad_AR.html
@@ -12,9 +12,9 @@
  </a-assets>
   <a-marker preset="kanji">
      <a-entity>
-      <a-entity position="-12 -4 0" scale="0.02 0.02 0.02">
-        <a-entity position="0 0 0" scale="0.01 0.01 0.01" rotation="-90 0 0" gltf-model="#mymodel"></a-entity>
-        <a-plane src="#ground" height="2000" width="2000" rotation="-90 0 0"></a-plane>
+      <a-entity scale="0.02 0.02 0.02">
+        <a-entity position="-125 0 0" scale="0.01 0.01 0.01" rotation="-90 0 0" gltf-model="#mymodel"></a-entity>
+        <a-plane src="#ground" height="200" width="200" rotation="-90 0 0"></a-plane>
      </a-entity>
     </a-entity>
  </a-marker>
