--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -2,6 +2,7 @@
  <head>
   <title>LiemarX Infogram</title>
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
    <a-scene artoolkit>
