--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -7,7 +7,7 @@
  <body style=’margin : 0px; overflow: hidden;’>
    <a-scene artoolkit>
         <!-- define your scene as usual -->
-        <a-gltf-model src="url(test.glb)" position="-7.5 -23 0" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="test.glb"></a-gltf-model>
+        <a-gltf-model src="url(model1.gltf)" position="-7.5 -23 0" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="model1.gltf"></a-gltf-model>
         <!-- define a camera inside the <a-marker-camera> -->
         <a-marker-camera preset='hiro'><a-marker-camera>
    </a-scene>    
