--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -9,12 +9,9 @@
 		<a-anchor hit-testing-enabled='true'>
 
 			<!-- Add your augmented reality here -->
-			<a-box position='0 0.5 0' material='opacity: 0.5; side:double; color:red;'>
-				<a-torus-knot radius='0.26' radius-tubular='0.05'>
-					<a-animation attribute="rotation" to="360 0 0" dur="5000" easing='linear' repeat="indefinite"></a-animation>
-				</a-torus-knot>
-			</a-box>
-
+            <!-- Asset management system. -->
+               <a-assets> <img id="advertisement" src="ad.png">  </a-assets>
+                   <a-plane src="#advertisement"></a-plane>
 		</a-anchor>
 
 		<!-- Define a static camera -->
