--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -10,7 +10,7 @@
 
 			<!-- Add your augmented reality here -->
             <!-- Asset management system. -->
-               <a-assets> <img id="advertisement" src="ad.png">  </a-assets>
+               <a-assets> <img id="advertisement" src="reports-logo.png">  </a-assets>
                    <a-plane src="#advertisement"></a-plane>
 		</a-anchor>
 
