--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -9,9 +9,8 @@
 		<a-anchor hit-testing-enabled='true'>
 
 			<!-- Add your augmented reality here -->
-            <!-- Asset management system. -->
-               <a-assets> <img id="advertisement" src="reports-logo.png">  </a-assets>
-                   <a-plane src="#advertisement"></a-plane>
+
+	        <a-entity geometry="primitive: plane; height: 10; width: 10" material="side: double" src="reports-logo.png"></a-entity>
 		</a-anchor>
 
 		<!-- Define a static camera -->
