--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -11,9 +11,9 @@
 			<!-- Add your augmented reality here -->
 <a-scene>
   <a-assets>
-    <img id="liemar" src="reports-logo.png">
+    <img id="liemar" src="reports-logo.jpg">
   </a-assets>
-	        <a-plane src="#liemar" height="100" width="100"></a-plane>
+	        <a-plane src="#liemar" rotation"-90 0 0"></a-plane>
 		</a-anchor>
 
 		<!-- Define a static camera -->
