--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -13,7 +13,7 @@
   <a-assets>
     <img id="liemar" src="reports-logo.jpg">
   </a-assets>
-	        <a-plane src="#liemar" rotation"-90 0 0"></a-plane>
+	        <a-plane src="#liemar" height="0.289" width="0.109" rotation"-90 0 0"></a-plane>
 		</a-anchor>
 
 		<!-- Define a static camera -->
