--- a/infomarker-01.html
+++ b/infomarker-01.html
@@ -5,14 +5,10 @@
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.0/aframe/build/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
-   <a-scene  embedded arjs='trackingMethod: best;'>
-		<a-anchor hit-testing-enabled='true'>
-			<!-- Add your augmented reality here -->
-                    <a-assets> <img id="liemar" src="reports-logo.jpg"> </a-assets>
-	            <a-plane src="#liemar" height="28.9" width="10.9" rotation"-90 0 0"></a-plane>
-		</a-anchor>
-		<!-- Define a static camera -->
-		<a-camera-static/>
-   </a-scene>    
+	<a-scene embedded arjs='sourceType: webcam;'>
+		<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+		<a-marker-camera preset='hiro'></a-marker-camera>
+	</a-scene>
+  
  </body>
 </html>
