--- a/read_qr.html
+++ b/read_qr.html
@@ -24,7 +24,7 @@ function showQRIntro() {
  body, input {font-size:14pt}
 input, label {vertical-align:middle}
 .qrcode-text {padding-right:1.7em; margin-right:0}
-.qrcode-text-btn {display:inline-block; background:url(qr_icon.svg) 50% 50% no-repeat; height:1em; width:1.7em; margin-left:-1.7em; cursor:pointer}
+.qrcode-text-btn {display:inline-block; background:url(./qr_icon.svg) 50% 50% no-repeat; height:1em; width:1.7em; margin-left:-1.7em; cursor:pointer}
 .qrcode-text-btn > input[type=file] {position:absolute; overflow:hidden; width:1px; height:1px; opacity:0}
  </style>
   <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
