--- a/read_qr.html
+++ b/read_qr.html
@@ -20,6 +20,8 @@ function showQRIntro() {
   return confirm("Use your camera to take a picture of a QR code.");
 }
  </script>
+ <script src="./qr_packed.js">
+</script>
  <style>
  body, input {font-size:14pt}
 input, label {vertical-align:middle}
