--- a/read_qr.html
+++ b/read_qr.html
@@ -33,5 +33,5 @@ input, label {vertical-align:middle}
    <label class=qrcode-text-btn>
   <input type=file accept="image/*" capture=environment onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
   </label> 
-  <input type=button value="Go" disabled>
+  <input type=button value="Go" enabled>
 </html>
