--- a/read_qr.html
+++ b/read_qr.html
@@ -1,4 +1,7 @@
 <html>
+ <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+ </head>
  <script>
  function openQRCamera(node) {
   var reader = new FileReader();
@@ -28,6 +31,10 @@ input, label {vertical-align:middle}
 .qrcode-text {padding-right:1.7em; margin-right:0}
 .qrcode-text-btn {display:inline-block; background:url(./qr_icon.svg) 50% 50% no-repeat; height:1em; width:1.7em; margin-left:-1.7em; cursor:pointer}
 .qrcode-text-btn > input[type=file] {position:absolute; overflow:hidden; width:1px; height:1px; opacity:0}
+  @viewport {
+  width: device-width ;
+  zoom: 1.0 ;
+}
  </style>
   <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
    <label class=qrcode-text-btn>
