--- a/read_qr.html
+++ b/read_qr.html
@@ -36,6 +36,7 @@ input, label {vertical-align:middle}
   zoom: 1.0 ;
 }
  </style>
+ <p>LiemarX Mobile Viewer</p>
   <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
    <label class=qrcode-text-btn>
   <input type=file accept="image/*" capture=environment onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
