--- a/read_qr.html
+++ b/read_qr.html
@@ -35,11 +35,10 @@ input, label {vertical-align:middle}
   width: device-width ;
   zoom: 1.0 ;
 }
-  .center {
+img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 }
  </style>
   <img src="Logo_Liemar.png" alt="Liemar" class="center">
