--- a/read_qr.html
+++ b/read_qr.html
@@ -40,6 +40,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 10px;
 }
  </style>
   <img src="Logo_Liemar.png" alt="Liemar" class="center">
