--- a/read_qr.html
+++ b/read_qr.html
@@ -42,6 +42,10 @@ img {
     margin-right: auto;
     margin-bottom: 10px;
 }
+  .cover {
+  width: 260px;
+  object-fit: scale-down;
+}
  </style>
   <img src="Logo_Liemar.png" alt="Liemar" class="center">
   <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
