--- a/read_qr.html
+++ b/read_qr.html
@@ -47,7 +47,7 @@ img {
   object-fit: scale-down;
 }
  </style>
-  <img src="Logo_Liemar.png" alt="Liemar" class="center">
+  <img src="reports-logo.jpg" alt="Liemar" class="center">
   <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
    <label class=qrcode-text-btn>
   <input type=file accept="image/*" capture=environment onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
