--- a/read_qr.html
+++ b/read_qr.html
@@ -52,5 +52,5 @@ img {
    <label class=qrcode-text-btn>
   <input type=file accept="image/*" capture=environment onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
   </label> 
-  <input type=button value="Go" onclick="window.location.href ='reader'">
+  <input type=button value="Go" onclick="window.location.href =file">
 </html>
