--- a/read_qr.html
+++ b/read_qr.html
@@ -50,7 +50,7 @@ img {
   <img src="reports-logo.jpg" alt="Liemar" class="center">
   <input type=text size=16 placeholder="Tracking Code" class=qrcode-text>
    <label class=qrcode-text-btn>
-  <input type=file accept="image/*" capture=environment onclick="return showQRIntro();" onchange="openQRCamera(this);" tabindex=-1>
+  <input type=file accept="image/*" capture=environment onchange="openQRCamera(this);" tabindex=-1>
   </label> 
-  <input type=button value="Go" onclick="window.location.href = qrcode-text">
+  <input type=button value="Go" onclick="window.location.href(qrcode-text)">
 </html>
