--- a/read_qr.html
+++ b/read_qr.html
@@ -18,8 +18,10 @@
     qrcode.decode(reader.result);
   };
   reader.readAsDataURL(node.files[0]);
+ }
+function myFunction() {
+    location.replace(qrcode.decode(reader.result))
 }
-
 function showQRIntro() {
   return confirm("Use your camera to take a picture of a QR code.");
 }
@@ -52,5 +54,6 @@ img {
    <label class=qrcode-text-btn>
   <input type=file accept="image/*" capture=environment onchange="openQRCamera(this);" tabindex=-1>
   </label> 
-  <input type=button value="Go" onclick="window.location.href(reader.readAsDataURL(node.files[0]))">
+  <input type=button value="Go" onclick="window.location.relocate(output)">
+  <button onclick="myFunction()">Go</button>
 </html>
