--- a/read_qr.html
+++ b/read_qr.html
@@ -55,5 +55,5 @@ img {
   <input type=file accept="image/*" capture=environment onchange="openQRCamera(this);" tabindex=-1>
   </label> 
   <input type=button value="Go" onclick="window.location.relocate(output)">
-  <button onclick="myFunction()">Go</button>
+ <p><button onclick="myFunction()">Go</button></p>
 </html>
