--- a/read_qr.html
+++ b/read_qr.html
@@ -54,6 +54,6 @@ img {
    <label class=qrcode-text-btn>
   <input type=file accept="image/*" capture=environment onchange="openQRCamera(this);" tabindex=-1>
   </label> 
-  <input type=button value="Go" onclick="window.location.relocate(openQRCamera(this))">
+  <input type=button value="Go" onclick="window.location.relocate="openQRCamera(this)">
  <p><button onclick="myFunction()">Go</button></p>
 </html>
