--- a/read_qr.html
+++ b/read_qr.html
@@ -33,7 +33,7 @@
       margin-top: 20px;
       background: #eee;
       padding: 10px;
-      padding-bottom: 0;
+      padding-bottom: 10px;
     }
 
     #output div {
