--- a/read_qr.html
+++ b/read_qr.html
@@ -10,6 +10,7 @@
       font-family: 'Ropa Sans', sans-serif;
       color: #333;
       max-width: 300px;
+      max-height: 300px;
       margin: 0 auto;
       position: relative;
     }
