--- a/read_qr.html
+++ b/read_qr.html
@@ -13,37 +13,38 @@
       max-height: 300px;
       margin: 0 auto;
       position: relative;
+      text-align: center;
     }
-
     h1 {
       margin: 10px 0;
       font-size: 30px;
+      text-align: center;
     }
-
     #loadingMessage {
       text-align: center;
       padding: 40px;
       background-color: #eee;
     }
-
     #canvas {
       width: 100%;
     }
-
     #output {
       margin-top: 20px;
       background: #eee;
       padding: 10px;
-      padding-bottom: 10px;
     }
-
     #output div {
-      padding-bottom: 10px;
       word-wrap: break-word;
     }
-    
     #noQRFound {
       text-align: center;
+    }
+    input[type=button] {
+      margin-top: 10px;
+      border: solid 2px #ccc; 
+      border-radius: 3px;
+      font-size: 20px;
+      cursor:pointer;
     }
   </style>
 </head>
@@ -55,8 +56,8 @@
   <div id="output" hidden>
     <div id="outputMessage">No QR code detected.</div>
     <div hidden><b>Data:</b> <span id="outputData"></span></div>
-    <input type=button id="outputData" value="Go" onClick="self.location=outputData.innerText;">
   </div>
+    <input type=button id="outputData" value="Go" onClick="self.location=outputData.innerText;">
   <script>
     var video = document.createElement("video");
     var canvasElement = document.getElementById("canvas");
