--- a/model5.html
+++ b/model5.html
@@ -24,7 +24,7 @@
       </a-entity>
 
       <a-entity id="target">
-         <a-gltf-model src="url(model5.gltf)" position="-10 0 0" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="model5.gltf"></a-gltf-model>
+         <a-gltf-model src="url(./models/model5.gltf)" position="-10 0 0" scale="0.001 0.001 0.001" rotation="-90 0 0" gltf-model="./models/model5.gltf"></a-gltf-model>
       </a-entity>
    </a-scene>    
  </body>
