--- a/STAALBETON/S0101002.HTML
+++ b/STAALBETON/S0101002.HTML
@@ -21,8 +21,8 @@
               "
           mouse-cursor="">
      </a-entity>
-     <a-entity  id="target">
-        <a-gltf-model src="url(shop_s0101002.gltf)" rotation="0 0 0" gltf-model="shop_s0101002.gltf"></a-gltf-model>
+     <a-entity>
+        <a-gltf-model id="target" src="url(shop_s0101002.gltf)" rotation="0 0 0" gltf-model="shop_s0101002.gltf"></a-gltf-model>
      </a-entity>
    </a-scene>       
  </body>
