--- a/model1.html
+++ b/model1.html
@@ -14,6 +14,7 @@
           orbit-controls="
               autoRotate: false;
               target: #target;
+              enablePan: true;
               enableDamping: true;
               dampingFactor: 0.125;
               rotateSpeed:0.25;
