--- a/model6.html
+++ b/model6.html
@@ -7,7 +7,7 @@
  <body style=’margin : 0px; overflow: hidden;’>
 <a-scene  embedded arjs='sourceType: webcam; '>
    <a-assets>
-     <a-asset-item id="mymodel" src="liemar.gltf"></a-asset-item>
+     <a-asset-item id="mymodel" src="models/liemar.gltf"></a-asset-item>
   </a-assets>
   <a-entity>
      <a-entity position="0 0 0" rotation="0 0 0" gltf-model="#mymodel"></a-entity>
