--- a/model6.html
+++ b/model6.html
@@ -6,7 +6,7 @@
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
   <a-scene  embedded arjs= 'sourceType: webcam;'>
-    <a-marker preset="custom" type="pattern" url="lmx.patt">
+    <a-marker preset="custom" type="pattern" url="lmx2.patt">
       <a-gltf-model src="url(liemar.gltf)" gltf-model="liemar.gltf"></a-gltf-model>
    </a-marker>
    <a-entity camera></a-entity>
