--- a/model6.html
+++ b/model6.html
@@ -7,7 +7,7 @@
  <body style=’margin : 0px; overflow: hidden;’>
   <a-scene  embedded arjs= 'sourceType: webcam;'>
     <a-marker preset="custom" type="pattern" url="lmx2.patt">
-      <a-gltf-model src="url(liemar.gltf)" gltf-model="liemar.gltf"></a-gltf-model>
+      <a-gltf-model  position="1 0 0" scale="1.5 1.5 1.5"  src="url(liemar.gltf)" gltf-model="liemar.gltf"></a-gltf-model>
    </a-marker>
    <a-entity camera></a-entity>
   </scene>
