--- a/brakel/brakel_ar.html
+++ b/brakel/brakel_ar.html
@@ -6,7 +6,7 @@
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
   <a-scene  embedded arjs= 'sourceType: webcam;' vr-mode-ui="enabled: false">
-    <a-marker preset="custom" type="pattern" url="brakel_ar.patt">
+    <a-marker preset="custom" type="pattern" url="brakel.patt">
       <a-gltf-model  position="0 0 0" scale="1.5 1.5 1.5" src="url(brakel_gear_vr2.gltf)" gltf-model="brakel_gear_vr2.gltf"></a-gltf-model>
     </a-marker>
     <a-entity camera></a-entity>
