--- a/brakel/brakel_ar.html
+++ b/brakel/brakel_ar.html
@@ -2,7 +2,7 @@
  <head>
   <title>Welcome @ LIEMAR</title>
   <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
-  <script src="aframe/build/aframe-ar.js"></script>
+  <script src="../aframe/build/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
   <a-scene  embedded arjs= 'sourceType: webcam;' vr-mode-ui="enabled: false">
