--- a/brakel/brakel_ar.html
+++ b/brakel/brakel_ar.html
@@ -1,13 +1,13 @@
 <html>
  <head>
-  <title>Welcome @ LIEMAR</title>
+  <title>Brakel Aveva Bcad model</title>
   <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
   <script src="../aframe/build/aframe-ar.js"></script>
  </head>
  <body style=’margin : 0px; overflow: hidden;’>
   <a-scene  embedded arjs= 'sourceType: webcam;' vr-mode-ui="enabled: false">
     <a-marker preset="custom" type="pattern" url="brakel.patt">
-      <a-gltf-model  position="0 0 0" scale="1.5 1.5 1.5" src="url(brakel_gear_vr2.gltf)" gltf-model="brakel_gear_vr2.gltf"></a-gltf-model>
+      <a-gltf-model  position="0 0 0" scale="0 0 0" src="url(brakel_gear_vr2.gltf)" gltf-model="brakel_gear_vr2.gltf"></a-gltf-model>
     </a-marker>
     <a-entity camera></a-entity>
   </scene>
