--- a/brakel/brakel_ar.html
+++ b/brakel/brakel_ar.html
@@ -10,6 +10,6 @@
       <a-gltf-model  position="0 0 0" scale="0.1 0.1 0.1" src="url(brakel_gear_vr2.gltf)" gltf-model="brakel_gear_vr2.gltf"></a-gltf-model>
     </a-marker>
     <a-entity camera></a-entity>
-  </scene>
+  </a-scene>
  </body>
 </html>
